--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tt-hardhat",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Hardhat TypeScript plugin boilerplate",
   "repository": "github:thundercore/tt-hardhat.git",
   "author": "Nomic Labs LLC",
@@ -19,7 +19,8 @@
     "test": "mocha --exit --recursive 'test/**/*.test.ts'",
     "build": "tsc",
     "watch": "tsc -w",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "publish": "npm publish"
   },
   "files": [
     "dist/src/",
