--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "mocha --exit --recursive 'test/**/*.test.ts'",
     "build": "tsc",
     "watch": "tsc -w",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "publish": "publish"
   },
   "files": [
     "dist/src/",
