--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "tt-hardhat",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Hardhat TypeScript plugin boilerplate",
-  "repository": "github:thundercore/tt-hardhat.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thundercore/tt-hardhat.git"
+  },
   "author": "Nomic Labs LLC",
   "license": "MIT",
   "main": "dist/src/index.js",
@@ -35,7 +38,7 @@
     "chai": "^4.2.0",
     "dotenv": "^16.0.1",
     "ethers": "^5.4.7",
-    "hardhat": "^2.0.0",
+    "hardhat": "^2.18.3",
     "mocha": "^7.1.2",
     "prettier": "2.0.5",
     "ts-node": "^8.1.0",
