--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tt-hardhat",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Hardhat TypeScript plugin boilerplate",
   "repository": {
     "type": "git",
@@ -36,7 +36,6 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^8.10.38",
     "chai": "^4.2.0",
-    "dotenv": "^16.0.1",
     "ethers": "^5.4.7",
     "hardhat": "^2.18.3",
     "mocha": "^7.1.2",
@@ -46,6 +45,9 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "dotenv": "*"
   },
   "peerDependencies": {
     "hardhat": "^2.0.0"
